--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.13.0"
 firebaseBom = "34.4.0"
 connectClient = "1.2.0-alpha01"
-kotlin = "2.0.21"
+kotlin = "2.2.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -20,6 +20,8 @@ appcompat = "1.7.1"
 playServicesLocation = "21.3.0"
 material3 = "1.4.0"
 ui = "1.9.5"
+places = "5.1.1"
+coreI18n = "1.0.0"
 #firebaseDatabaseKtx = "22.0.1"
 #firebaseFirestoreKtx = "26.0.2"
 #firebaseFirestore = "26.0.2"
@@ -68,6 +70,8 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database" 
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
+androidx-core-i18n = { group = "androidx.core", name = "core-i18n", version.ref = "coreI18n" }
 
 
 
