--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ material3 = "1.4.0"
 ui = "1.9.5"
 places = "5.1.1"
 coreI18n = "1.0.0"
+runtime = "1.10.0"
+foundationLayout = "1.10.0"
 #firebaseDatabaseKtx = "22.0.1"
 #firebaseFirestoreKtx = "26.0.2"
 #firebaseFirestore = "26.0.2"
@@ -72,6 +74,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
 androidx-core-i18n = { group = "androidx.core", name = "core-i18n", version.ref = "coreI18n" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "runtime" }
+androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
 
 
 
